--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,14 @@
+
+  body,
+  html {
+    width: 100%;
+    font-size: 10px;
+    color: var(--text-color);
+    font-weight: normal;
+    font-family: sans-serif;
+    background-color: var(--home-bg-color);
+  }
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 .aaa_card_a {
     width: 382px;
@@ -61,6 +72,55 @@ font-family: Roboto;
 .mobile_nav{
     display: none;
 }
+
+.menu-trigger img{
+    width: 30px;
+    border-radius: 25px;
+}
+.dropdown-menu{
+    position: absolute;
+    top: 100px;
+    right: 20px;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 10px 20px;
+    width: 200px;
+}
+
+
+.dropdown-menu.active{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    transition: 0.3s ease;
+}
+.dropdown-menu.inactive{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-20px);
+    transition: 0.3s ease;
+}
+
+
+
+h3 span{
+    font-size: 14pt;
+    color: #3f3f3f;
+    font-weight: 400;
+}
+.dropdown-menu ul li{
+    padding: 10px 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+.dropdownItem{
+    display: flex;
+    flex-direction: column;
+
+}
+a{
+    text-decoration: none;
+}
+
 @media screen and (max-width: 980px) {
 .ffg{
   display: flex;
